Agregar botón volver al inicio en login

--- a/admin.html
+++ b/admin.html
@@ -42,14 +42,17 @@
 <body>
     <div id="loginScreen" style="display:none;">
         <div class="login-form">
-            <h2>🔐 Acceso Administrativo</h2>
-            <div class="form-group">
-                <label>Contraseña</label>
-                <input type="password" id="adminPassword" placeholder="Ingrese contraseña">
-            </div>
-            <button class="btn-login" onclick="login()">Ingresar</button>
-        </div>
-    </div>
+ <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem;">
+    <h2 style="margin: 0;">🔐 Acceso Administrativo</h2>
+    <a href="index.html" style="color: var(--primary-blue); text-decoration: none; font-weight: 600; font-size: 0.9rem;">
+        ← Volver al Inicio
+    </a>
+</div>
+<div class="form-group">
+    <label>Contraseña</label>
+    <input type="password" id="adminPassword" placeholder="Ingrese contraseña">
+</div>
+<button class="btn-login" onclick="login()">Ingresar</button>
 
     <div id="adminPanel" style="display:none;">
         <nav class="navbar">
