Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -30,11 +30,17 @@
                 <span></span>
             </button>
             <ul class="nav-menu" id="navMenu">
-    <li><a href="index.html" class="active">Inicio</a></li>
+    <li><a href="index.html">Inicio</a></li>
     <li><a href="servicios.html">Servicios</a></li>
     <li><a href="productos.html">Productos</a></li>
     <li><a href="contacto.html">Contacto</a></li>
     <li><a href="admin.html" class="btn-login-nav">Iniciar Sesión</a></li>
+    <li>
+        <a href="carrito.html" class="cart-link">
+            🛒 Carrito
+            <span id="cartBadge" class="cart-badge" style="display: none;">0</span>
+        </a>
+    </li>
 </ul>
         </div>
     </nav>
